Fonctionnel / Problème id

--- a/index.html
+++ b/index.html
@@ -25,10 +25,13 @@
 			<div class="button col-md-1" id="but5">
 				<p><strong>Radius Bloc</strong></p>
 			</div>
-			<div class="button col-md-1 col-md-offset-3" id="but6">
-				<p><strong>Modifier Bloc</strong></p>
+			<div class="button col-md-1 col-md-offset-2" id="but6">
+				<p><strong>Déplacer Bloc</strong></p>
 			</div>
 			<div class="button col-md-1" id="but7">
+				<p><strong>Modifier Bloc</strong></p>
+			</div>
+			<div class="button col-md-1" id="but8">
 				<p><strong>Supprimer Bloc</strong></p>
 			</div>
 		</div>
